--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
             align-items: center;
             flex-direction: column;
         }
+
+        /* clear button */
+        .clearButton {
+            outline: none;
+            border: none;
+            position: absolute;
+            background-color: transparent;
+            right: 0;
+            height: 40px;
+            width: 30px;
+            color: #aaa;
+            display: none;
+        }
+
         .custom-field {
             position: relative;
             font-size: 14px;
@@ -75,14 +89,29 @@
 </head>
 <body>
     <label class="custom-field">
-        <input type="text" required/>
+        <input type="text" class="textField" onkeypress="onCheck(0);" required/>
         <span class="placeholder">Animation Input Borderless</span>
+        <button class="clearButton" onclick="onClear(0);">&#10006</button>
     </label>
     <br>
     <label class="custom-field border">
-        <input type="text" required/>
+        <input type="text" class="textField"  onkeypress="onCheck(1);" required/>
         <span class="placeholder">Animation Input Border</span>
+        <button class="clearButton" onclick="onClear(1);" style="height: 44px;" >&#10006</button>
     </label>
     
 </body>
+
+<script>
+    function onCheck(index) {
+        if (event.target.value.length >= 0) {
+            document.getElementsByClassName('clearButton')[index].style.display = "inline-block";
+        }
+    }
+
+    function onClear(index) {
+        document.getElementsByClassName('textField')[index].value = '';
+        document.getElementsByClassName('clearButton')[index].style.display = "none";
+    }
+</script>
 </html>
