--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             position: absolute;
             background-color: transparent;
             right: 0;
-            height: 40px;
+            top: 32px;
             width: 30px;
             color: #aaa;
             display: none;
