--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <label class="custom-field border">
         <input type="text" class="textField"  onkeypress="onCheck(1);" required/>
         <span class="placeholder">Animation Input Border</span>
-        <button class="clearButton" onclick="onClear(1);" style="height: 44px;" >&#10006</button>
+        <button class="clearButton" onclick="onClear(1);" style="top: 34px;" >&#10006</button>
     </label>
     
 </body>
